--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ button{
 
 <body>
 
-<header>EDUINO AI Full Body TRACKING</header>
+<header>EDUINO ROBOTS-AI Full Body TRACKING</header>
 
 <div class="main">
 
@@ -332,3 +332,4 @@ cam.start();
 
 </body>
 </html>
+
